# coupling

./: .gitignore  CMakeLists.txt  COPYING
bundle/: CMakeLists.txt
cmake/: coupling_compiler_flags.cmake
src/: CMakeLists.txt
src/coupling/: CMakeLists.txt  TwoApplications.h
src/mains/: CMakeLists.txt  forecast_mom6_fv3.cc  forecast_mom6_qg.cc  forecast_qg_l95.cc  hofx_l95_l95.cc  hofx_mom6_fv3.cc  hofx_qg_l95.cc
test/: CMakeLists.txt  forecast_qg_l95.yaml  hofx_qg_l95.yaml  l95_fc.yaml  l95_hofx.yaml  qg_fc.yaml  qg_hofx.yaml
test_mom6fv3/: CMakeLists.txt
test_mom6fv3/executables/: CMakeLists.txt  TestCoupledGeometry.cc  TestCoupledModel.cc  TestCoupledModelAuxControl.cc  forecast_fv3_mom6.cc  hofx3d_fv3_mom6.cc
test_mom6fv3/testinput/: coupledgeometry.yaml  coupledmodel.yaml  coupledmodelaux.yaml  forecast_fv3lm.yaml  forecast_fv3lm_mom6.yaml  forecast_mom6.yaml  forecast_mom6_fv3lm.yaml  hofx3d_fv3_mom6.yaml  hofx3d_fv3_mom6_dontusemom6.yaml  soca_gridgen.yaml
test_mom6fv3/testref/: forecast_fv3lm.ref  forecast_fv3lm_mom6.ref  forecast_mom6.ref  hofx3d_fv3_mom6.ref  hofx3d_fv3_mom6_dontusemom6.ref  hofx_fv3lm.ref
tools/: CMakeLists.txt
